fix: 이미지 개선

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -243,6 +243,7 @@
     <string name="chat_leave_negative">머무르기</string>
 
     <!--멍멍 짓기-->
+    <string name="woof_member_name">%s\'s 댕댕이</string>
     <string name="woof_permission">위치 권한이 필요합니다.</string>
     <string name="woof_setting">설정</string>
     <string name="woof_package">package:%s</string>
