--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="user_report_edit_hint">직접 작성하기</string>
     <string name="user_report_save">신고하기</string>
     <string name="user_report_message">유저를 신고했어요</string>
+    <string name="club_report_message">모임을 신고했어요</string>
 
     <!--설정-->
     <string name="alarm_settings_total_push">반갑개에서 보내는 소식</string>
