--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -84,8 +84,8 @@
     <string name="alarm_settings_chatting_push_description">모든 채팅 메시지 알림</string>
     <string name="alarm_settings_club_push">모임 알림</string>
     <string name="alarm_settings_club_push_description">가입한 모임의 알림</string>
-    <string name="alarm_settings_woof_push">산책 알림</string>
-    <string name="alarm_settings_woof_push_description">다른 강아지의 산책 여부 알림</string>
+    <string name="alarm_settings_playground_push">놀이터 알림</string>
+    <string name="alarm_settings_playground_push_description">다른 강아지의 놀이터 참여 여부 알림</string>
     <string name="setting">설정</string>
     <string name="unsubscribe">탈퇴하기</string>
     <string name="logout">로그아웃</string>
@@ -244,34 +244,31 @@
     <string name="chat_leave_positive">나가기</string>
     <string name="chat_leave_negative">머무르기</string>
 
-    <!--멍멍 짓기-->
-    <string name="woof_member_name">%s\'s 댕댕이</string>
-    <string name="woof_permission">위치 권한이 필요합니다.</string>
-    <string name="woof_setting">설정</string>
-    <string name="woof_package">package:%s</string>
-    <string name="woof_marker_registered">발자국을 등록했어요!</string>
-    <string name="woof_has_not_pet">강아지를 등록해야 발자국을 남길 수 있어요!</string>
-    <string name="woof_age_year">%d살</string>
-    <string name="woof_age_month">%d개월</string>
-    <string name="woof_not_exist_my_playground">내가 참여한 놀이터가 존재하지 않아요!</string>
-    <string name="woof_my_footprint">MY</string>
-    <string name="woof_register_playground_title">놀이터 등록하기</string>
-    <string name="woof_address_out_of_korea">발자국 등록은 한국에서만 가능합니다!</string>
+    <!--놀이터-->
+    <string name="playground_permission">위치 권한이 필요합니다.</string>
+    <string name="playground_setting">설정</string>
+    <string name="playground_package">package:%s</string>
+    <string name="playground_marker_registered">놀이터를 등록했어요!</string>
+    <string name="playground_has_not_pet">강아지를 등록해야 놀이터에 참여할 수 있어요!</string>
+    <string name="playground_age_year">%d살</string>
+    <string name="playground_age_month">%d개월</string>
+    <string name="playground_not_exist_my_playground">내가 참여한 놀이터가 존재하지 않아요!</string>
+    <string name="playground_my">MY</string>
+    <string name="playground_register_playground_title">놀이터 등록하기</string>
+    <string name="playground_address_out_of_korea">놀이터 등록은 한국에서만 가능합니다!</string>
     <string name="playground_register_help">놀이터에 다른 강아지들도 참여할 수 있어요!
         \n친구들을 만나 반갑게 인사해보세요~</string>
-    <string name="woof_register_playground">이 위치에 놀이터 등록</string>
-    <string name="woof_location_tracking">실시간으로 위치를 추적 중입니다.</string>
-    <string name="woof_information">정보</string>
-    <string name="woof_description">소개</string>
-    <string name="woof_footprint_refresh">새로고침</string>
-    <string name="woof_end_walk">산책 종료하기</string>
+    <string name="playground_register_playground">이 위치에 놀이터 등록</string>
+    <string name="playground_location_tracking">실시간으로 위치를 추적 중입니다.</string>
+    <string name="playground_information">정보</string>
+    <string name="playground_description">소개</string>
+    <string name="playground_refresh">새로고침</string>
+    <string name="playground_join_complete">놀이터에 참여했어요!</string>
     <string name="playground_leave_my_playground">놀이터에서 나갔습니다!</string>
     <string name="playground_auto_leave_my_playground">오랜 시간 자리를 비워 자동으로 놀이터에서 나갔습니다!</string>
-    <string name="playground_already_participate_playground">이미 참여중인 놀이터가 존재합니다!</string>
     <string name="playground_overlap_playground_creation">놀이터 등록 범위가 다른 놀이터와 중복됩니다!</string>
-    <string name="woof_stop_walk">산책을 종료했어요!</string>
-    <string name="woof_status_all">전체</string>
-    <string name="woof_address_korea">대한민국</string>
+    <string name="playground_status_all">전체</string>
+    <string name="playground_address_korea">대한민국</string>
     <string name="playground_join">놀이터 참여하기</string>
     <string name="playground_leave">놀이터 나가기</string>
     <string name="playground_pet_is_playing">노는중</string>
@@ -280,23 +277,24 @@
     <string name="playground_participation_status">참여 현황</string>
     <string name="playground_pet_count">마리</string>
     <string name="playground_please_input_message">상태메시지를 입력해주세요.</string>
+    <string name="playground_dialog_title">새로운 놀이터 참여</string>
+    <string name="playground_dialog_description">현재 참여 중인 놀이터에서 나가고,\n새로운 놀이터에 참여하시겠습니까?</string>
 
-    <string name="woof_fail_to_load_pet_existence_btn">강아지 등록 여부를 확인하지 못했습니다!</string>
-    <string name="woof_fail_to_load_near_footprints">놀이터들을 불러오지 못했습니다!</string>
-    <string name="woof_fail_to_register_playground">놀이터 등록에 실패했습니다!</string>
-    <string name="woof_fail_to_update_playground_arrival">놀이터 도착 여부를 업데이트하지 못했습니다!</string>
-    <string name="woof_fail_to_end_walk">산책 종료에 실패했습니다!</string>
-    <string name="woof_fail_to_delete_my_footprint">발자국 삭제에 실패했습니다!</string>
-    <string name="fail_to_load_playground_info">놀이터 정보를 불러오지 못했습니다!</string>
-    <string name="fail_to_load_playground_summary">놀이터 요약 정보를 불러오지 못했습니다!</string>
-    <string name="fail_to_join_playground">놀이터 참여하기에 실패했습니다!</string>
+    <string name="playground_fail_to_load_pet_existence_btn">강아지 등록 여부를 확인하지 못했습니다!</string>
+    <string name="playground_fail_to_load_near_playgrounds">놀이터들을 불러오지 못했습니다!</string>
+    <string name="playground_fail_to_register_playground">놀이터 등록에 실패했습니다!</string>
+    <string name="playground_fail_to_update_playground_arrival">놀이터 도착 여부를 업데이트하지 못했습니다!</string>
+    <string name="playground_fail_to_leave">놀이터 나가기에 실패했습니다!</string>
+    <string name="playground_fail_to_load_playground_info">놀이터 정보를 불러오지 못했습니다!</string>
+    <string name="playground_fail_to_load_playground_summary">놀이터 요약 정보를 불러오지 못했습니다!</string>
+    <string name="playground_fail_to_join_playground">놀이터 참여하기에 실패했습니다!</string>
 
-    <string name="message_title">상태메시지</string>
-    <string name="message_cancel">취소</string>
-    <string name="message_confirm">확인</string>
-    <string name="message_length">%d / 20</string>
-    <string name="fail_to_patch_message">상태메시지 설정에 실패했습니다!</string>
-
+    <!--상태메시지-->
+    <string name="state_message_title">상태메시지</string>
+    <string name="state_message_cancel">취소</string>
+    <string name="state_message_confirm">확인</string>
+    <string name="state_message_length">%d / 20</string>
+    <string name="fail_to_patch_state_message">상태메시지 설정에 실패했습니다!</string>
 
     <!--프로필-->
     <string name="male">남</string>
@@ -309,7 +307,7 @@
     <!--권한-->
     <string name="alarm_dialog_title">알람 허용 사용 설정</string>
     <string name="alarm_dialog_body">알람을 설정하지 않으면, 채팅과 모임 알람을 받을 수 없어요!</string>
-    <string name="alarm_dialog_body_woof">알림을 거부하여 모임 알림을 받을 수 없습니다.</string>
+    <string name="alarm_dialog_body_playground">알림을 거부하여 모임 알림을 받을 수 없습니다.</string>
     <string name="location_dialog_title">위치 허용 사용 설정</string>
     <string name="location_dialog_body">위치 설정하지 않으면, 친구를 찾을 수 없어요!</string>
     <string name="permission_cancel">취소</string>
