--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -263,7 +263,7 @@
     <string name="playground_location_tracking">실시간으로 위치를 추적 중입니다.</string>
     <string name="playground_information">정보</string>
     <string name="playground_description">소개</string>
-    <string name="playground_refresh">새로고침</string>
+    <string name="playground_refresh">현 지도에서 조회</string>
     <string name="playground_join_complete">놀이터에 참여했어요!</string>
     <string name="playground_leave_my_playground">놀이터에서 나갔습니다!</string>
     <string name="playground_auto_leave_my_playground">오랜 시간 자리를 비워 자동으로 놀이터에서 나갔습니다!</string>
@@ -286,6 +286,7 @@
     <string name="playground_fail_to_register_playground">놀이터 등록에 실패했습니다!</string>
     <string name="playground_fail_to_update_playground_arrival">놀이터 도착 여부를 업데이트하지 못했습니다!</string>
     <string name="playground_fail_to_leave">놀이터 나가기에 실패했습니다!</string>
+    <string name="playground_fail_to_load_my_playground">내가 참여한 놀이터를 불러오지 못했습니다!</string>
     <string name="playground_fail_to_load_playground_info">놀이터 정보를 불러오지 못했습니다!</string>
     <string name="playground_fail_to_load_playground_summary">놀이터 요약 정보를 불러오지 못했습니다!</string>
     <string name="playground_fail_to_join_playground">놀이터 참여하기에 실패했습니다!</string>
